finished the contrast issue

--- a/styles/module.css
+++ b/styles/module.css
@@ -57,6 +57,9 @@
   font-size: 30px;
 }
 
+a {
+  color: white;
+}
 
 
 @media(min-width: 800px){
